Update to 1.21.5 and modified redirect logic (#73)
* Updated to 1.21.5
Added context to commands(so worldedit works).

* Removed "TestClassArgumentType" and "TestFunctionArgumentType."